# get-programming-with-haskell

./: .gitignore  LICENSE  README.md  get-programming-with-haskell.cabal
Unit01/: Lesson01.hs  Lesson02.hs  Lesson03.hs  Lesson04.hs  Lesson05.hs  Lesson06.hs  Lesson07.hs  Lesson08.hs  Lesson09.hs  Lesson10.hs  first_prog  first_prog.hs  hello  hello.hs
Unit02/: Lesson11.hs  Lesson12.hs  Lesson13.hs  Lesson14.hs  Lesson15.hs
Unit03/: Lesson16.hs  Lesson17.hs  Lesson17_Q2.hs  Lesson18.hs  Lesson19.hs  Lesson20.hs
Unit04/: Example.hs  Example.java  pizza.hs  sum.hs
Unit04/Lesson21/: Lesson21.hs  fibo.hs  pizza.hs
Unit04/Lesson22/: Lesson22.hs  QC3.hs  QC4.hs  quotes.hs  simple_calc.hs  simple_calc_ans.hs  sum.hs  sum_lazy.hs
Unit04/Lesson23/: Lesson23.hs  bg_highlight.hs  hello_world.hs
Unit04/Lesson24/: Lesson24.hs  capitalize.hs  cp  cp.hs  fileCount_strict.hs  fileCounts  fileCounts.hs  goodbye.txt  hello.txt  hello1.txt
Unit04/Lesson25/: Lesson25.hs  glitcher  glitcher.hs  tatsuhiko.txt
Unit04/Lesson26/: books.html  marc_to_html.hs
Unit05/: Lesson27.hs  Lesson29.hs  Lesson30.hs  Lesson31.hs  Lesson32.hs  Lesson33.hs  Unit05.hs
Unit05/Lesson28/: Lesson28.hs  dist.hs  min3.hs  robots.hs
Unit06/Lesson34/: Lesson34.hs  Main  Main.hs  Palindrome.hs
Unit06/Lesson35/palindrome-checker/: .gitignore  ChangeLog.md  README.md  package.yaml  palindrome-checker.cabal
Unit06/Lesson35/pizzas/: .gitignore  ChangeLog.md  README.md  package.yaml  pizzas.cabal
Unit06/Lesson35/~pizzas/: LICENSE  (+1 more)
Unit06/Lesson38/: Lesson38.hs
Unit07/: Lesson38.hs  Lesson42.hs
(+50 files in other folders)
